--- a/API_CD/package.json
+++ b/API_CD/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mssql": "^6.2.1",
     "npm-run-all": "^4.1.5",
